# hpc-final

./: .gitignore  CMakeLists.txt  README.md  computePixel.c  computePixel.cuh  computePixel.h  defs.h  timer.c  timer.h  validate.h  validationFunc.cpp
MandelbrotDistributed/: main.cpp
MandelbrotGPU/: main.cu
MandelbrotGpuDistributed/: gpuStuff.cu  main.cpp  main.cu
MandelbrotSerial/: bmp.h  main.cpp
MandelbrotThreaded/: bmp.c  bmp.h  main.cpp
bmp/: bmp.c
